# shroud

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: CMakeLists.txt  shroud.cpp  shroud.h  shroudlib.cpp  tracebld.cpp  tracebld.h  trcbld.cpp
test/: mapping.json  right.txt  test.ps1  wrong.txt
